--- a/_sass/sections.scss
+++ b/_sass/sections.scss
@@ -254,7 +254,7 @@ html[data-section="home-working-with-big-tech"] {
   background-color: var(--blue-dark);
 
   .background-video-container {
-    .__overlay.--creek {
+    .__overlay.--working-with-big-tech {
       opacity: 1;
     }
   }
