Tweak videos for Riverbank/StreamS

--- a/_includes/background_video.html
+++ b/_includes/background_video.html
@@ -27,6 +27,7 @@
       <div class="__overlay overlay --dark-blue-inv"></div>
       <div class="__overlay overlay --the-business-of-river"></div>
       <div class="__overlay overlay --the-business-of-data"></div>
+      <div class="__overlay overlay --streams"></div>
     </div>
     {% endif %} {% if page.videos.creek %}
     <div class="__video --creek" data-video-name="creek">
