--- a/_sass/overlays.scss
+++ b/_sass/overlays.scss
@@ -125,18 +125,14 @@
   }
 
   &.--riverbank {
-    background-image: linear-gradient(
-      rgba(11, 23, 35, 0.8),
-      rgba(111, 143, 175, 1) 60%,
-      rgba(111, 143, 175, 0.8) 80%
-    );
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3));
   }
 
   &.--streams {
     background-image: linear-gradient(
-      rgba(111, 143, 175, 0.5),
-      rgba(14, 43, 104, 0.8) 60%,
-      rgba(14, 43, 104, 0.9) 80%
+      rgba(0, 0, 0, 0.5),
+      rgba(39, 64, 148, 0.4),
+      rgba(19, 44, 128, 1)
     );
   }
 }
