--- a/_sass/effects.scss
+++ b/_sass/effects.scss
@@ -1,3 +1,12 @@
+// https://medium.com/building-blocks/how-to-skip-css-transitions-with-jquery-e0155d06e82e
+.x-transition {
+  -o-transition: none !important;
+  -ms-transition: none !important;
+  -moz-transition: none !important;
+  -webkit-transition: none !important;
+  transition: none !important;
+}
+
 .--delay-0-5 {
   transition-delay: 0.5s !important;
 }
