Better video loading

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="__link-container">
-      <a href="javascript:void" title="About" class="__link l1">About</a>
+      <a href="#home-resources" title="About" class="__link l1">About</a>
       <ul class="__sublinks">
         <li><a class="l1" href="javascript:void">Press</a></li>
         <li><a class="l1" href="javascript:void">Legal</a></li>
@@ -47,14 +47,14 @@
         href="{{ site.baseurl }}{% link riverbank.html %}"
         title="Riverbank"
         class="__link l1 __page-link"
-        ><img src="{{ site.baseurl }}/assets/img/riverbank.png" alt="Riverbank" /></a
-      >
+        ><img src="{{ site.baseurl }}/assets/img/riverbank.png" alt="Riverbank"
+      /></a>
       <a
         href="{{ site.baseurl }}{% link streams.html %}"
         title="StreamS"
         class="__link l1 __page-link"
-        ><img src="{{ site.baseurl }}/assets/img/streams.png" alt="StreamS" /></a
-      >
+        ><img src="{{ site.baseurl }}/assets/img/streams.png" alt="StreamS"
+      /></a>
     </div>
     <a href="javascript:void" title="Sign Up" class="__link button --sign-up"
       >Sign Up</a
