--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -510,6 +510,14 @@ body {
     }
   }
 
+  .__scrib-3 {
+    path {
+      transform: translate(5%, -30%);
+      stroke-dasharray: 29500;
+      stroke-dashoffset: 29500;
+    }
+  }
+
   .__scrib1 {
     path {
       transform: translate(-5%, -27%);
@@ -526,6 +534,14 @@ body {
     }
   }
 
+  .__scrib1-3 {
+    path {
+      transform: scale(0.5, 0.9) translate(0%, -20%);
+      stroke-dasharray: 32500;
+      stroke-dashoffset: 32500;
+    }
+  }
+
   .__scrib2 {
     path {
       transform: translate(-5%, -22%);
@@ -537,6 +553,14 @@ body {
   .__scrib2-2 {
     path {
       transform: scale(1.2, 1.2) translate(-10%, -40%);
+      stroke-dasharray: 41500;
+      stroke-dashoffset: 41500;
+    }
+  }
+
+  .__scrib2-3 {
+    path {
+      transform: scale(0.5, 0.9) translate(0%, -20%);
       stroke-dasharray: 41500;
       stroke-dashoffset: 41500;
     }
