Add basic signup page

--- a/_includes/background_video.html
+++ b/_includes/background_video.html
@@ -40,6 +40,7 @@
     <div class="__video --jungle" data-video-name="jungle">
       <div id="background-video-player-jungle"></div>
       <div class="__overlay overlay --riverbank"></div>
+      <div class="__overlay overlay --signup"></div>
     </div>
     {% endif %}
   </div>
