--- a/_sass/overlays.scss
+++ b/_sass/overlays.scss
@@ -128,6 +128,10 @@
     background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3));
   }
 
+  &.--signup {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.5));
+  }
+
   &.--streams {
     background-image: linear-gradient(
       rgba(0, 0, 0, 0.5),
