Final edits for Weds

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -56,7 +56,10 @@
         ><img src="{{ site.baseurl }}/assets/img/streams.png" alt="StreamS"
       /></a>
     </div>
-    <a href="javascript:void" title="Sign Up" class="__link button --sign-up"
+    <a
+      href="{{ site.baseurl }}{% link signup.html %}"
+      title="Sign Up"
+      class="__link button --sign-up"
       >Sign Up</a
     >
   </div>
