--- a/_includes/video_player.html
+++ b/_includes/video_player.html
@@ -1,13 +1,8 @@
 <div id="video-player-container" class="video-player-container --hidden">
   <div class="__overlay" onclick="river.hideVideo(); return false;"></div>
-  <div
-    id="video-player"
-    class="__video-player"
-    onclick="event.stopPropagation();"
-  >
-    <img
-      src="{{ site.baseurl }}/assets/img/video-placeholder.jpg"
-      alt="Play Video"
-    />
+  <div class="__video-player" onclick="event.stopPropagation();">
+    <div class="__int">
+      <div id="video-player" class="__player"></div>
+    </div>
   </div>
 </div>
