--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,37 +7,99 @@
   </div>
   <div class="__links">
     <div class="__link-container">
-      <a href="javascript:void" title="Platform" class="__link l1">Platform</a>
+      <a
+        href="{{ site.baseurl }}{% link signup.html %}"
+        title="Platform"
+        class="__link l1"
+        >Platform</a
+      >
       <ul class="__sublinks">
-        <li><a class="l1" href="javascript:void">Data Exchange</a></li>
-        <li><a class="l1" href="javascript:void">Data Integrity</a></li>
+        <li>
+          <a class="l1" href="{{ site.baseurl }}{% link signup.html %}"
+            >Data Exchange</a
+          >
+        </li>
+        <li>
+          <a class="l1" href="{{ site.baseurl }}{% link signup.html %}"
+            >Data Integrity</a
+          >
+        </li>
       </ul>
     </div>
 
     <div class="__link-container">
-      <a href="javascript:void" title="Products" class="__link l1">Products</a>
+      <a
+        href="{{ site.baseurl }}{% link signup.html %}"
+        title="Products"
+        class="__link l1"
+        >Products</a
+      >
       <ul class="__sublinks">
-        <li><a class="l1" href="javascript:void">Social</a></li>
-        <li><a class="l1" href="javascript:void">Discovery</a></li>
-        <li><a class="l1" href="javascript:void">Monetization</a></li>
+        <li>
+          <a class="l1" href="{{ site.baseurl }}{% link signup.html %}"
+            >Social</a
+          >
+        </li>
+        <li>
+          <a class="l1" href="{{ site.baseurl }}{% link signup.html %}"
+            >Discovery</a
+          >
+        </li>
+        <li>
+          <a class="l1" href="{{ site.baseurl }}{% link signup.html %}"
+            >Monetization</a
+          >
+        </li>
       </ul>
     </div>
 
     <div class="__link-container">
-      <a href="javascript:void" title="Services" class="__link l1">Services</a>
+      <a
+        href="{{ site.baseurl }}{% link signup.html %}"
+        title="Services"
+        class="__link l1"
+        >Services</a
+      >
       <ul class="__sublinks">
-        <li><a class="l1" href="javascript:void">Compliance</a></li>
-        <li><a class="l1" href="javascript:void">Data Insights</a></li>
-        <li><a class="l1" href="javascript:void">App Development</a></li>
+        <li>
+          <a class="l1" href="{{ site.baseurl }}{% link signup.html %}"
+            >Compliance</a
+          >
+        </li>
+        <li>
+          <a class="l1" href="{{ site.baseurl }}{% link signup.html %}"
+            >Data Insights</a
+          >
+        </li>
+        <li>
+          <a class="l1" href="{{ site.baseurl }}{% link signup.html %}"
+            >App Development</a
+          >
+        </li>
       </ul>
     </div>
 
     <div class="__link-container">
-      <a href="#home-resources" title="About" class="__link l1">About</a>
+      <a
+        href="{{ site.baseurl }}{% link index.html %}#home-resources"
+        title="About"
+        class="__link l1"
+        >About</a
+      >
       <ul class="__sublinks">
-        <li><a class="l1" href="javascript:void">Press</a></li>
-        <li><a class="l1" href="javascript:void">Legal</a></li>
-        <li><a class="l1" href="javascript:void">Team</a></li>
+        <li>
+          <a class="l1" href="{{ site.baseurl }}{% link signup.html %}"
+            >Press</a
+          >
+        </li>
+        <li>
+          <a class="l1" href="{{ site.baseurl }}{% link signup.html %}"
+            >Legal</a
+          >
+        </li>
+        <li>
+          <a class="l1" href="{{ site.baseurl }}{% link signup.html %}">Team</a>
+        </li>
       </ul>
     </div>
   </div>
