New video for Riverbank

--- a/_includes/background_video.html
+++ b/_includes/background_video.html
@@ -42,6 +42,11 @@
       <div class="__overlay overlay --riverbank"></div>
       <div class="__overlay overlay --signup"></div>
     </div>
+    {% endif %} {% if page.videos.waterfall %}
+    <div class="__video --waterfall" data-video-name="waterfall">
+      <div id="background-video-player-waterfall"></div>
+      <div class="__overlay overlay --riverbank"></div>
+    </div>
     {% endif %}
   </div>
 
