--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -134,11 +134,19 @@ body {
   .__logo {
     flex-basis: 25%;
     flex-shrink: 2;
-    position: relative;
 
-    a {
+    display: flex;
+    flex-flow: row nowrap;
+    position: relative;
+    align-items: center;
+
+    a.__river {
       display: block;
       padding: 5px;
+    }
+
+    .__hamburger {
+      margin: 10px 20px;
     }
 
     svg {
@@ -169,7 +177,7 @@ body {
     }
   }
 
-  .__links {
+  > .__links {
     display: flex;
     flex-basis: 45%;
     flex-grow: 2;
@@ -226,6 +234,44 @@ body {
 
     .__link.--sign-up {
       min-height: 2em;
+    }
+  }
+}
+
+.hamburger {
+  position: relative;
+
+  .__toggle {
+    z-index: 2;
+    font-size: 2em;
+    text-decoration: none;
+    display: block;
+  }
+
+  .__links {
+    list-style-type: none;
+    padding: 0;
+    position: absolute;
+    opacity: 0;
+    top: 2em;
+    left: 0;
+    width: 24em;
+    transition: top var(--transition-time), opacity var(--transition-time);
+
+    .__li {
+      margin: 0.5em 0;
+    }
+
+    a {
+      padding: 0.5em 0;
+    }
+  }
+
+  &.--visible {
+    .__links {
+      opacity: 1;
+      top: 2em;
+      z-index: 1;
     }
   }
 }
