--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -245,6 +245,10 @@ body {
   padding: 0.6em 1.4em 0.35em 1.4em;
   border-radius: 20px;
 
+  &.--block {
+    display: block;
+  }
+
   &.--sign-up {
     color: var(--signup-link-text-color);
     font-family: "Baskerville", serif;
