--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,13 @@
       >{% include river_logo.svg %}</a
     >
     <div id="hamburger" class="__hamburger hamburger">
-      <a href="javascript:river.toggleHamburger();" class="__toggle">🍔</a>
+      <a href="javascript:river.toggleHamburger();" class="__toggle">
+        <svg viewBox="0 0 100 80" width="40" height="40">
+          <rect fill="currentColor" width="100" height="20"></rect>
+          <rect fill="currentColor" y="30" width="100" height="20"></rect>
+          <rect fill="currentColor" y="60" width="100" height="20"></rect>
+        </svg>
+      </a>
       <ul class="__links">
         {% include hamburger_link.html title="Introduction" section="home-intro"
         %} {% include hamburger_link.html title="River is a platform for your
