--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -254,7 +254,7 @@ body {
     position: absolute;
     opacity: 0;
     top: 2em;
-    left: 0;
+    left: 1.5em;
     width: 24em;
     transition: top var(--transition-time), opacity var(--transition-time);
 
