--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -248,7 +248,11 @@ body {
     display: block;
   }
 
+  .__links-c {
+  }
+
   .__links {
+    visibility: hidden;
     list-style-type: none;
     padding: 0;
     position: absolute;
@@ -264,11 +268,17 @@ body {
 
     a {
       padding: 0.5em 0;
+      white-space: nowrap;
+      font-size: 22px;
     }
   }
 
   &.--visible {
+    .__links-c {
+    }
+
     .__links {
+      visibility: visible;
       opacity: 1;
       top: 2em;
       z-index: 1;
