--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -270,6 +270,10 @@ body {
       padding: 0.5em 0;
       white-space: nowrap;
       font-size: 22px;
+
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 
