Fix issue where background scrim wasn't always clickable

--- a/_includes/video_player.html
+++ b/_includes/video_player.html
@@ -1,6 +1,6 @@
 <div id="video-player-container" class="video-player-container --hidden">
   <div class="__overlay" onclick="river.hideVideo(); return false;"></div>
-  <div class="__video-player" onclick="event.stopPropagation();">
+  <div class="__video-player" onclick="river.hideVideo(); return false;">
     <div class="__int">
       <div id="video-player" class="__player"></div>
     </div>
