--- a/_includes/header.html
+++ b/_includes/header.html
@@ -40,19 +40,24 @@
     <div class="__link-container">
       <a
         href="{{ site.baseurl }}{% link signup.html %}"
-        title="Platform"
+        title="Videos"
         class="__link l1"
-        >Platform</a
+        >Videos</a
       >
       <ul class="__sublinks">
         <li>
-          <a class="l1" href="{{ site.baseurl }}{% link signup.html %}"
-            >Data Exchange</a
+          <a class="l1" href="{{ site.baseurl }}{% link index.html %}#home-video-1" onclick="return river.showSection(event)"
+            >You create $data$ every day</a
           >
         </li>
         <li>
-          <a class="l1" href="{{ site.baseurl }}{% link signup.html %}"
-            >Data Integrity</a
+          <a class="l1" href="{{ site.baseurl }}{% link index.html %}#home-data-untapped" onclick="return river.showSection(event)"
+            >Data Untapped</a
+          >
+        </li>
+        <li>
+          <a class="l1" href="{{ site.baseurl }}{% link index.html %}#home-business-of-data" onclick="return river.showSection(event)"
+            >The Business of Data</a
           >
         </li>
       </ul>
@@ -61,53 +66,10 @@
     <div class="__link-container">
       <a
         href="{{ site.baseurl }}{% link signup.html %}"
-        title="Products"
+        title="Team"
         class="__link l1"
-        >Products</a
+        >Team</a
       >
-      <ul class="__sublinks">
-        <li>
-          <a class="l1" href="{{ site.baseurl }}{% link signup.html %}"
-            >Social</a
-          >
-        </li>
-        <li>
-          <a class="l1" href="{{ site.baseurl }}{% link signup.html %}"
-            >Discovery</a
-          >
-        </li>
-        <li>
-          <a class="l1" href="{{ site.baseurl }}{% link signup.html %}"
-            >Monetization</a
-          >
-        </li>
-      </ul>
-    </div>
-
-    <div class="__link-container">
-      <a
-        href="{{ site.baseurl }}{% link signup.html %}"
-        title="Services"
-        class="__link l1"
-        >Services</a
-      >
-      <ul class="__sublinks">
-        <li>
-          <a class="l1" href="{{ site.baseurl }}{% link signup.html %}"
-            >Compliance</a
-          >
-        </li>
-        <li>
-          <a class="l1" href="{{ site.baseurl }}{% link signup.html %}"
-            >Data Insights</a
-          >
-        </li>
-        <li>
-          <a class="l1" href="{{ site.baseurl }}{% link signup.html %}"
-            >App Development</a
-          >
-        </li>
-      </ul>
     </div>
 
     <div class="__link-container">
@@ -117,21 +79,6 @@
         class="__link l1"
         >About</a
       >
-      <ul class="__sublinks">
-        <li>
-          <a class="l1" href="{{ site.baseurl }}{% link signup.html %}"
-            >Press</a
-          >
-        </li>
-        <li>
-          <a class="l1" href="{{ site.baseurl }}{% link signup.html %}"
-            >Legal</a
-          >
-        </li>
-        <li>
-          <a class="l1" href="{{ site.baseurl }}{% link signup.html %}">Team</a>
-        </li>
-      </ul>
     </div>
   </div>
   <div class="__page-links">
