--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html
+  data-id="{{ page.pageId }}"
   data-section="{{ page.initialSection }}"
   class="{% if page.animatedBackgroundColor %}--animated-bg{% endif %}"
 >
