--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -179,9 +179,10 @@ body {
 
   > .__links {
     display: flex;
-    flex-basis: 45%;
+    flex-basis: 55%;
     flex-grow: 2;
-    justify-content: space-between;
+    justify-content: flex-end;
+    gap: 6em;
 
     .__link {
       padding: 20px;
@@ -219,7 +220,7 @@ body {
     flex-flow: row nowrap;
     justify-content: flex-end;
     align-items: center;
-    flex-basis: 30%;
+    flex-basis: 20%;
 
     .__pages {
       margin: 0 2vw 0 0;
