Basic about page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -74,7 +74,7 @@
 
     <div class="__link-container">
       <a
-        href="{{ site.baseurl }}{% link index.html %}#home-resources"
+        href="{{ site.baseurl }}{% link about.html %}"
         title="About"
         class="__link l1"
         >About</a
