Basic team page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -65,7 +65,7 @@
 
     <div class="__link-container">
       <a
-        href="{{ site.baseurl }}{% link signup.html %}"
+        href="{{ site.baseurl }}{% link team.html %}"
         title="Team"
         class="__link l1"
         >Team</a
