Unify the "standalone" pages as best we can

--- a/_includes/background_video.html
+++ b/_includes/background_video.html
@@ -49,6 +49,11 @@
       <div id="background-video-player-waterfall"></div>
       <div class="__overlay overlay --riverbank"></div>
     </div>
+    {% endif %} {% if page.videos.about %}
+    <div class="__video --about" data-video-name="about">
+      <div id="background-video-player-about"></div>
+      <div class="__overlay overlay --about"></div>
+    </div>
     {% endif %}
   </div>
   <div class="overlay --util"></div>
