--- a/_sass/overlays.scss
+++ b/_sass/overlays.scss
@@ -154,4 +154,8 @@
       rgba(19, 44, 128, 1)
     );
   }
+
+  &.--about {
+    background-image: linear-gradient(rgba(0, 0, 0, 0) 40%, rgba(0, 0, 0, 0.8));
+  }
 }
