--- a/_sass/sections.scss
+++ b/_sass/sections.scss
@@ -441,6 +441,9 @@ html[data-section="home-resources"] {
   max-width: 80vw;
 }
 
+/******************************************************************************
+  Standalone Pages
+******************************************************************************/
 
 html[data-section="streams"],
 html[data-section="about"],
@@ -452,20 +455,34 @@ html[data-section="team"] {
   justify-content: flex-start;
   align-items: flex-start;
 
+  .__page-title {
+    margin-bottom: 1em;
+  }
+
+  .p3 {
+    font-family: "MontserratBold", "Montserrat", sans-serif;
+  }
+
   .section {
     width: unset;
     margin: 0 5em;
   }
+}
 
-  .__logo-and-title {
-    img {
-      max-height: 10em;
-    }
+.logo-and-title {
+  margin-bottom: 2em;
+  img {
+    max-height: 10em;
+  }
 
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    gap: 1em;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  gap: 1em;
+
+  .p2 {
+    margin: 0;
+    margin-bottom: 0;
   }
 }
 
@@ -515,17 +532,6 @@ html[data-section="riverbank"] {
   .__copy {
     flex-basis: 38vw;
     margin-right: 5vw;
-
-    .__logo-and-title {
-      img {
-        max-height: 10em;
-      }
-  
-      display: flex;
-      flex-flow: row nowrap;
-      align-items: center;
-      gap: 1em;
-    }
   }
 
   .__images {
@@ -557,16 +563,15 @@ html[data-section="riverbank"] {
 ******************************************************************************/
 
 html[data-section="about"] {
-  justify-content: flex-start;
-  margin-top: calc(8vh + 80px);
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: flex-start;
-  align-items: flex-start;
+  --body-color: white;
+  --transition-time: 2s;
 
-  .section {
-    width: unset;
-    margin: 0 5em;
+  background-color: #010509;
+
+  .background-video-container {
+    .__overlay.--about {
+      opacity: 1;
+    }
   }
 }
 
