--- a/_includes/background_video.html
+++ b/_includes/background_video.html
@@ -54,6 +54,11 @@
       <div id="background-video-player-about"></div>
       <div class="__overlay overlay --about"></div>
     </div>
+    {% endif %} {% if page.videos.streams %}
+    <div class="__video --streams" data-video-name="streams">
+      <div id="background-video-player-streams"></div>
+      <div class="__overlay overlay --streams"></div>
+    </div>
     {% endif %}
   </div>
   <div class="overlay --util"></div>
