--- a/_sass/overlays.scss
+++ b/_sass/overlays.scss
@@ -149,9 +149,9 @@
 
   &.--streams {
     background-image: linear-gradient(
-      rgba(0, 0, 0, 0.5),
-      rgba(39, 64, 148, 0.4),
-      rgba(19, 44, 128, 1)
+      90deg,
+      rgba(39, 64, 148, 0.2),
+      rgba(0, 0, 0, 0.6)
     );
   }
 
