--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -179,7 +179,7 @@ body {
 
   > .__links {
     display: flex;
-    flex-basis: 55%;
+    flex-basis: 45%;
     flex-grow: 2;
     justify-content: flex-end;
     gap: 6em;
@@ -220,7 +220,7 @@ body {
     flex-flow: row nowrap;
     justify-content: flex-end;
     align-items: center;
-    flex-basis: 20%;
+    flex-basis: 24em;
 
     .__pages {
       margin: 0 2vw 0 0;
